view_hold HOLD_LOADED blocks scanner in salesTable

--- a/Project/ui/payment_frame.ui
+++ b/Project/ui/payment_frame.ui
@@ -490,6 +490,19 @@ RECEIPT</string>
     </layout>
    </item>
    <item>
+    <spacer name="verticalSpacer_7">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <widget class="QFrame" name="keypadFrame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -672,6 +685,12 @@ RECEIPT</string>
    </item>
    <item>
     <widget class="QLabel" name="payStatusLabel">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>30</height>
+      </size>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -679,6 +698,19 @@ RECEIPT</string>
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer_6">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
