--- a/Project/assets/dialog.qss
+++ b/Project/assets/dialog.qss
@@ -196,6 +196,23 @@ QLineEdit[validation="error"] {
     background-color: #fff1f0;
 }
 
+/* View Hold: */
+
+QLineEdit#viewHoldSearchLineEdit:focus,
+QLineEdit#viewHoldNoteLineEdit:focus {
+    border: 1px solid #2196f3;
+}
+
+QWidget#ViewHoldDialog QLineEdit:disabled,
+QWidget#ViewHoldDialog QLineEdit:disabled {
+    background-color: #f3f1f1 !important;
+}
+
+QWidget#ViewHoldDialog QLineEdit:read-only,
+QWidget#ViewHoldDialog QLineEdit:read-only {
+    background-color: #f5f5f5;
+}
+
 /* 1. State-specific style (Overrides base because it's more specific) */
 QLabel[objectName$="FieldLbl"][readOnly="true"] {
     color: #7b7c7d !important;
@@ -328,7 +345,8 @@ QGroupBox::title {
 
 /* 1. Table Header Styling */
 QWidget#vegEntryDialog QHeaderView::section,
-QTableWidget#salesTable QHeaderView::section  {
+QTableWidget#salesTable QHeaderView::section,
+QTableWidget#receiptsTable QHeaderView::section  {
     font-size: 10pt;
     font-weight: bold;
     font-family: "Verdana";
@@ -342,12 +360,18 @@ QTableWidget#salesTable QHeaderView::section  {
 
 /* 2. Table Styling */
 QWidget#vegEntryDialog QTableWidget#vegEntryTable,
-QWidget#SalesFrame QTableWidget#salesTable {
+QWidget#SalesFrame QTableWidget#salesTable,
+QWidget#ViewHoldDialog QTableWidget#receiptsTable{
     font-size: 10pt;
     font-weight: bold;
     color: #434d44;
     gridline-color: #bec1c8;
     border: 1px solid #b7adad;; /* outer border of table */
+}
+
+QWidget#ViewHoldDialog QTableWidget#receiptsTable::item:selected {
+    background-color: #e3f2fd;
+    color: #1565c0;
 }
 
 /* 3. Alternating row colors are set programmatically in Python due to embedded widgets. */
