vendor.py controller wired

--- a/Project/ui/vendor.ui
+++ b/Project/ui/vendor.ui
@@ -180,6 +180,9 @@
         </size>
        </property>
        <property name="text">
+        <string/>
+       </property>
+       <property name="placeholderText">
         <string>-- Optional --</string>
        </property>
       </widget>
