--- a/Project/assets/main.qss
+++ b/Project/assets/main.qss
@@ -39,6 +39,117 @@ QLabel#labelDayTime {
 QLabel#labelDate { padding-left: 20px; }
 QLabel#labelDayTime { padding-right: 20px; }
 
+/* =========================================================
+   TITLE BAR STYLING
+   ========================================================= */
+QFrame#customTitleBar {
+    background-color: 66bb6a;
+    min-height: 40px;
+}
+
+QPushButton#customCloseBtn {
+    color: white;
+    background: transparent;
+    border: 2px solid transparent; /* Reserve space for the focus border */
+    font-size: 40px;
+    font-weight: bold;
+}
+
+/* =============================================================
+   LOGIN DIALOG
+   ============================================================= */
+
+QDialog#loginDialog {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #4caf50, stop:0.5 #66bb6a, stop:1 #81c784);
+    color: #1b5e20;
+    font-family: "Segoe UI", Arial, sans-serif;
+}
+
+QLabel#loginHeaderLabel {
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    background: transparent;
+}
+
+QComboBox#loginComboBox,
+QLineEdit#loginPassLineEdit {
+    background: white;
+    border: 1px solid #bdc3c7;
+    border-radius: 8px;
+    padding: 8px 12px;
+    font-size: 18px;
+    color: #2c3e50;
+}
+
+QLineEdit#loginPassLineEdit[echoMode="2"] {          /* password field */
+    lineedit-password-character: 9679;
+}
+
+QLineEdit#loginPassLineEdit:focus, 
+QComboBox#loginComboBox:focus {
+    border: 1px solid #2196f3;
+}
+
+QComboBox::down-arrow {
+    image: url(assets/icons/down_arrow.svg);
+    width: 22px;
+    height: 22px;
+}
+
+QComboBox::drop-down {
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    width: 20px;
+    border-left: 1px solid #c7cdd6;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+QPushButton#btnLoginOk,
+QPushButton#btnLoginCancel {
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px;
+    min-height: 50px;
+}
+
+QPushButton#btnLoginCancel {
+    background: #5c825e;          
+}
+QPushButton#btnLoginCancel:hover {
+    background: #659067;          
+}
+QPushButton#btnLoginCancel:pressed {
+    background: rgb(54, 76, 56);        
+}
+
+QPushButton#btnLoginOk {
+    background: #2e7d32;       
+}
+QPushButton#btnLoginOk:hover {
+    background: #388e3c;          
+}
+QPushButton#btnLoginOk:pressed {
+    background: #1b5e20;          
+}
+
+QPushButton#loginForgetBtn {
+    color: #1b5e20;
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    font-weight: 500
+}
+
+QPushButton#loginForgetBtn:hover {
+    color: #2b8f32;
+    text-decoration: underline;
+}
 
 /* =============================================================
    PAYMENT FRAME AND ITS CHILDREN
